<resources>
    <string name="app_name">Sbay</string>

    <string name="wts">"Welcome To SBAY"</string>
    <string name="ff">"Fill out the form to get started"</string>
    <string name="username">"Username"</string>
    <string name="email">"Email"</string>
    <string name="psw">"Password"</string>
    <string name="contact">"Contact"</string>
    <string name="address">"Address"</string>
    <string name="signup">"SignUp"</string>
    <string name="ahaa">"Already have an account? "</string>

    <string name="login">"Login"</string>
    <string name="gtsya">"Good To See You Again&#33;"</string>
    <string name="ltmyb">"Login to manage your bookings"</string>
    <string name="dhaa">"Don't have an account? "</string>
    <string name="forgotpsw">"Forgot password? "</string>
    <string name="clickHere">"Click here"</string>
    <string name="resetpsw">"Reset Password&#33;"</string>
    <string name="spre">"Send Password Reset Email"</string>
    <string name="emailnotfound">"Email not found"</string>
    <string name="resetemailsent">"Password reset email sent to "</string>
    <string name="resetemailnotsent">"Password reset email not send. Please try again!"</string>

    <string name="cust">"Customer"</string>
    <string name="seller">"Seller"</string>

    <string name="iemail">"Invalid email address"</string>
    <string name="icontactno">"Invalid contact number"</string>
    <string name="verifyemail">"Verification email sent to "</string>
    <string name="notverifyemail">"Verification email not send. Please try again!</string>
    <string name="sww">"Something went wrong!"</string>
    <string name="ae">" already exist"</string>

    <string name="menu">"Menu</string>
    <string name="etya">"Enter to your account"</string>
    <string name="ltya"><u>Login to your account</u></string>

    <string name="sc">"Software Categories"</string>
    <string name="mobileapp">"Mobile Apps"</string>
    <string name="webapp">"Web Apps"</string>
    <string name="vr_ar">"VR/AR"</string>
    <string name="ai">"AI"</string>
    <string name="ecommerce">"Ecommerce"</string>
    <string name="iot">"IOT"</string>
    <string name="ts">"top softwares"</string>
    <string name="addtocart">"Add to cart"</string>
    <string name="rs">"Rs "</string>

    <string name="details">"Details"</string>
    <string name="name">"Name :"</string>
    <string name="cat">"Category :"</string>
    <string name="demourl">"Demo URL :"</string>
    <string name="hostUrl">"Host URL :"</string>
    <string name="desc">"Description"</string>

    <string name="notavailable">"Not available"</string>
    <string name="mycart">"My Cart"</string>
    <string name="total">"Total :"</string>
    <string name="checkOut">"Check Out"</string>
    <string name="qty">"Quantity :"</string>
    <string name="plus">"+"</string>
    <string name="minus">"-"</string>
    <string name="del">"Delete"</string>

    <string name="productadded">"Product Added"</string>
    <string name="emptycart">"Empty Cart"</string>
    <string name="productdeleted">"Product Deleted"</string>
    <string name="productalreadyadded">"Product Already Added"</string>

    <string name="postyourproduct">"Post Your Product"</string>
    <string name="pname">"Product Name"</string>
    <string name="pdesc">"Product Description"</string>
    <string name="pcost">"Product Cost"</string>
    <string name="pcat">"Product Category"</string>
    <string name="promptcat">"Choose a category"</string>
    <string-array name="product_categories">
        <item>Android/Ios App</item>
        <item>Android App</item>
        <item>Ios App</item>
        <item>Web App</item>
        <item>VR</item>
        <item>AR</item>
        <item>AI</item>
        <item>Ecommerce</item>
        <item>IOT</item>
    </string-array>

    <string name="scurl">"Source code Url"</string>
    <string name="hosturl">"Host Url"</string>
    <string name="demovideourl">"Demo Url"</string>
    <string name="uploadimage">"Upload Feature Image"</string>
    <string name="submit">"Submit"</string>
    <string name="psaved">"Product Saved"</string>
    <string name="selectImage">"Please Upload Image"</string>
    <string name="imgError">"Image Could Not Upload\nPlease Try Again"</string>
    <string name="vurl">"Url must contain http or https\ne.g. https://www.google.com"</string>

    <string name="allsoftwares">"All Softwares</string>
    <string name="addsoftware">"Add Software</string>
    <string name="mysoftware">"My Softwares"</string>
    <string name="chat">"Chat</string>
    <string name="notification">"Notification"</string>
    <string name="logout">"Logout"</string>
    <string name="mypurchase">"My Purchase"</string>
    <string name="newsoftwarerequest">"New Software Request"</string>
    <string name="edit">"Edit</string>

    <string name="updateyourproduct">"Update Your Product"</string>
    <string name="pupdated">"Product Updated"</string>

    <string name="custrequest">"Describe in detail what customization you want in this software"</string>
    <string name="appforcustz">"Apply for customization"</string>
    <string name="logascust">"Login as customer"</string>
    <string name="custreqsent">"Your request for customization has been sent"</string>

    <string name="afns">"Apply For New Software Development"</string>
    <string name="ps">"Select Category</string>
    <string name="newrequest">"Describe in detail what you want in this software"</string>
    <string name="newreqsent">"Your request for new software development has been sent"</string>

    <string name="vep">"View &#38; Edit Your Profile"</string>
    <string name="profileupdated">"Profile Updated</string>
    
    <string name="login_preference">"com.sbay.mrz.sbay_login_preference"</string>
    <string name="login_status_preference">"com.sbay.mrz.sbay_login_status_preference"</string>
    <string name="npa">"No product available"</string>
</resources>
