<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".newSoftwareRequest">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/afns"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ps"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textSize="17sp"
            android:layout_marginTop="30dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/border"
            android:padding="4dp">

            <Spinner
                android:id="@+id/sp_productCat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/product_categories"
                android:prompt="@string/promptcat"
                />

        </LinearLayout>

        <EditText
            android:id="@+id/pDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:padding="4dp"
            android:hint="@string/newrequest"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark"
            android:inputType="textMultiLine"/>

        <Button
            android:id="@+id/btn_newRequest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/border_blue"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="17sp"
            android:textAllCaps="false" />

    </LinearLayout>

</ScrollView>