<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/alfa_slab_one"
            android:paddingTop="120dp"
            android:paddingBottom="40dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="50sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="160dp"
            android:layout_marginBottom="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <Button
                android:id="@+id/btn_customer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_blue"
                android:text="@string/cust"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_seller"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/border_blue"
                android:text="@string/seller"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>